.provarCaches/00D6C0000000xA6UAI/objects/sked__Schedule_Template__c.object
<CustomObject>
    <fields>
        <fullName>sked__Deleted_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deleted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Schedule_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked__Deleted_Date__c</fullName>
        <label>Deleted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sked__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sked__Is_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sked__Period_Days__c</fullName>
        <label>Period Days</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Schedule Template</label>
    <nameField>
        <label>Schedule Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Schedule Templates</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>sked__PeriodDaysPositive</fullName>
        <active>true</active>
        <errorConditionFormula>AND (NOT(ISNULL(sked__Period_Days__c)), sked__Period_Days__c &lt;= 0)</errorConditionFormula>
        <errorDisplayField>sked__Period_Days__c</errorDisplayField>
        <errorMessage>If Period Days is set it must be positive.</errorMessage>
    </validationRules>
</CustomObject>